syntax = "proto3";

option csharp_namespace = "CommerceFlow.Protobufs";

message CreateTokensRequest{
	int32 user_id = 1;
	string user_role = 2;
}

message CreateTokensResponse{
	string access_token = 1;
	string refresh_token = 2;
}

message VerifyRequest{
	string refresh_token = 1;
	string user_role = 2;
}

message VerifyResponse{
	bool is_success = 1;
	string access_token = 2;
	string refresh_token = 3;
}

message SendPasswordResetLinkRequest{
    string email = 1;
}

message SendPasswordResetLinkResponse{
	bool is_success = 1;
}

message VerifyPasswordResetRequest{
	string reset_token = 1;
}

message VerifyPasswordResetResponse{
	bool is_success = 1;
}