syntax = "proto3";

option csharp_namespace = "Gateway";

package greet;

service AuthService {
  rpc CreateTokens (CreateTokensRequest) returns (CreateTokensResponse);
  rpc SendPasswordResetLink (SendPasswordResetLinkRequest) returns (SendPasswordResetLinkResponse);
  rpc Verify (VerifyRequest) returns (VerifyResponse);
  rpc VerifyPasswordReset (VerifyPasswordResetRequest) returns (VerifyPasswordResetResponse);
}

message CreateTokensRequest{
	int32 user_id = 1;
	string user_role = 2;
}

message CreateTokensResponse{
	string access_token = 1;
	string refresh_token = 2;
}

message VerifyRequest{
	string refresh_token = 1;
	string user_role = 2;
}

message VerifyResponse{
	bool is_valid = 1;
	int32 user_id = 2;
	string access_token = 3;
	string refresh_token = 4;
}

message SendPasswordResetLinkRequest{
    string email = 1;
}

message SendPasswordResetLinkResponse{
	bool success = 1;
}

message VerifyPasswordResetRequest{
	string token = 1;
}

message VerifyPasswordResetResponse{
	bool success = 1;
}
